mutt (1.5.20-5) unstable; urgency=low

  * debian/patches:
    + upstream/533370-pgp-inline.patch: fixing the patch from 1.5.20-3, now
      pgp.c is correctly included (Closes: 533370)
    + upstream/537694-segv-imap-headers.patch: fixing a segfault when the IMAP 
      server sends additional headers and mutt segfaults (Closes: 537694)

 -- Antonio Radici <antonio@dyne.org>  Wed, 16 Sep 2009 22:31:22 +0100

mutt (1.5.20-4) unstable; urgency=low

  * Backing out the broken mutt-patched/sidebar-newonly patch 
    (Closes: 546591, 546592)

 -- Antonio Radici <antonio@dyne.org>  Mon, 14 Sep 2009 18:49:29 +0100

mutt (1.5.20-3) unstable; urgency=low

  [ Adeodato Simó ]
  * Remove myself from Uploaders.

  [ Antonio Radici ]
  * debian/patches:
    + features/ifdef: fixed a typo (Closes: 539974)
    + features/compressed-folders: removed any reference to DefaultMagic
      (Closes: 541360)
    + debian-specific/Muttrc: correctly state that exim4 does not strip Bcc:
      headers (Closes: 474194)
    + upstream/544180-italian-yesorno.patch: fixing a problem in the italian
      translation of a multichoice string (Closes: 544180)
    + upstream/543467-thread-segfault.patch: patch to prevent mutt from
      segfaulting when Ctrl+R is hit on malformed messages (Closes: 543467)
    + upstream/393926-internal-viewer.patch: display any text/* part with the
      internal viewer (Closes: 393926)
    + upstream/538128-mh-folder-access.patch: MH dirs are now correctly
      parsed (Closes: 538128)
    + upstream/537818-emptycharset.patch: handling empty charsets without
      segfaulting (Closes: 537818)
    + upstream/535096-pop-port.patch: allow a user to specify a port for a pop
      connection, as it was before 1.5.20 (Closes: 535096)
    + upstream/542910-search-segfault.patch: fixes a bug in search which caused
      a segfault (Closes: 542910)
    + upstream/533370-pgp-inline.patch: inline pgp messages now displayed